--- a/app/components/ui/Homeform.module.scss
+++ b/app/components/ui/Homeform.module.scss
@@ -1,8 +1,9 @@
 .formcontent{
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
 .formcontentleft,
 .formcontentright{
@@ -16,10 +17,14 @@
     flex-direction: column;
     &>img{
         height: 100%;
-        z-index: -1;
+        z-index: 0;
     }
 }
+.formcontentleft{
+    height: auto;
+}
 .formcontentleftcontent{
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -44,6 +49,7 @@
 .formcontentright{
     background: #083600;
     form{
+        z-index: 1;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -51,11 +57,60 @@
         align-items: start;
         color: #fff;
         gap: 25px;
+        button{
+            font-size: 14px;
+            line-height: 16px;
+            padding: 10px 15px;
+            color: #fff;
+            border-radius: 8px;
+            outline: none;
+            border: none;
+            background-color: #24BF00;
+            cursor: pointer;
+        }
         label{
+            width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: start;
             align-items: start;
+            gap: 8px;
+            span{
+                font-size: 16px;
+                line-height: 18px;
+                font-weight: 500;
+            }
+            input{
+                width: 100%;
+                font-size: 16px;
+                line-height: 20px;
+                font-weight: 400;
+                background-color: #fff;
+                border-radius: 8px;
+                padding: 10px 15px;
+                outline: none;
+                border: none;
+                color: #000;
+                &::placeholder{
+                    color: #D1D1D1;
+                }
+            }
+            textarea{
+                color: #000;
+                width: 100%;
+                background-color: #fff;
+                border-radius: 8px;
+                padding: 10px 15px;
+                font-size: 16px;
+                line-height: 20px;
+                font-weight: 400;
+                outline: none;
+                border: none;
+                resize: none;
+                &::placeholder{
+                    color: #D1D1D1;
+                }
+            }
         }
     }
 }
