--- a/app/components/ui/Homeabout.module.scss
+++ b/app/components/ui/Homeabout.module.scss
@@ -86,6 +86,11 @@
         position: inherit !important;
         border-radius: 8px;
     }
+    &:nth-of-type(2){
+        &>img{
+            height: 360px !important;
+        }
+    }
 }
 .green{
     color: #199800;
