--- a/app/components/layout/Header.module.scss
+++ b/app/components/layout/Header.module.scss
@@ -50,7 +50,32 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            transition: all 300ms ease-in-out;
+            cursor: pointer;
+            position: relative;
+            &.headerMobileIconActive{
+                span{
+                    transition: all 300ms ease-in-out;
+                    &:first-child{
+                        position: absolute;
+                        top: 10px;
+                        right: 0;
+                        transform: rotate(45deg);
+                    }
+                    &:nth-child(2){
+                        display: none;
+                        opacity: 0;
+                    }
+                    &:last-child{
+                        position: absolute;
+                        top: 10px;
+                        right: 0;
+                        transform: rotate(-45deg);
+                    }
+                }
+            }
             span{
+                transition: all 300ms ease-in-out;
                 width: 100%;
                 height: 2px;
                 background-color: #000;
@@ -61,7 +86,7 @@
             height: 87vh;
             position: absolute;
             bottom: 0;
-            left: 0;
+            left: -100%;
             background-color: transparent;
             z-index: 10;
             display: none;
@@ -70,6 +95,7 @@
             // justify-content: center;
             align-items: center;
             flex-direction: column;
+            transition: all 300ms ease-in-out;
             ul{
                 background-color: #fff;
                 padding: 20px 30px;
