--- a/app/components/ui/Homeabout.module.scss
+++ b/app/components/ui/Homeabout.module.scss
@@ -130,3 +130,20 @@
         width: 100%;
     }
 }
+@media (max-width: 400px){
+    .homeabout > h3{
+        font-size: 36px;
+        line-height: 48px;
+    }
+    .homeabout > p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .homeaboutitemlistnumbers{
+        padding: 10px;
+        span:last-of-type{
+            font-size: 14px;
+            line-height: 16px;
+        }
+    }
+}
